
Release 3.9
===========

Availability
------------
This release is not yet available.

Supported platforms
-------------------
ns-3.9 has been tested on the following platforms:

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------

Bugs fixed
----------
The following lists many of the bugs that were fixed since ns-3.7, in
many cases referencing the Bugzilla bug number

   - IPv4 global routing code; stub networks were assumed to be /24
     and added as /24 networks even if the mask is actually different
   - bug 842 - ns-3-dev crashes using block acks
   - OLSR was generating messages on non-OLSR interfaces
   - bug 861 - Forwarding drops (due to no route found) were not being logged 
               in IPv4 or IPv6 ascii traces
   - ICMPv4 objects not properly registered; affected serialization code
   - bug 875 - Set FCS included flag in Radiotap header
   - bug 702 - Global routing doesn't respond to interface events
   - bug 906 - NSC TCP socket fork did not copy txbuffersize over
   - bug 828: PacketSocket::Close does not unregister protocol handler
   - bug 900:  RawTextConfigLoad::Default does not load configurations
   - bug 858 - support MSG_PEEK in IPv4/IPv6 raw socket
   - bug 932 - Support IP_HDRINCL option for Ipv4RawSocket

Known issues
------------

Release 3.8
===========

Availability
------------
This release is immediately available from:
http://www.nsnam.org/releases/ns-allinone-3.8.tar.bz2

Supported platforms
-------------------
ns-3.8 has been tested on the following platforms:
  - linux x86 gcc 4.4.0, 4.3.2, 4.2, 4.1.1, 4.1 and 3.4.6 (debug and optimized)
  - linux x86_64 gcc 4.4.0, 4.3.2, 4.2.4, 4.2.3, 4.2.1, 4.1.3, 3.4.6 (debug and optimized)
  - MacOS X ppc gcc 4.0.x and 4.2.x (debug and optimized)
  - cygwin gcc 4.3.4 (debug and optimized)
